// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JobListItem Renders for failed execution 1`] = `
<WithStyles(ForwardRef(Grid))
  className="job_f1y41u1"
  container={true}
  spacing={1}
>
  <WithStyles(ForwardRef(Grid))
    item={true}
    xs={1}
  >
    <div
      className="topAlign_fhdg7rv"
    >
      <WithStyles(CheckCircleIcon) />
    </div>
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
    xs={10}
  >
    <div>
      <span
        className="jobName_f1cjtqm0"
      >
        <a
          href="https://console.cloud.google.com/ai-platform/jobs/notebook_abcd_abcxyz?project=test-project"
          target="_blank"
        >
          notebook abcd
           
          <WithStyles(LaunchIcon) />
        </a>
      </span>
    </div>
    <div>
      <div
        className="jobCaption_f1nmk5cv"
      >
        <span>
          May 1, 2020, 7:09 PM
        </span>
      </div>
      <div
        className="bold_f1wf24vo spacing_f1w4o4fu"
      >
        <LearnMoreLink
          disabled={false}
          href="https://notebooks.cloud.google.com/view/test-project/notebook_abcd/abcd.ipynb"
          noUnderline={true}
          text="VIEW RESULT"
        />
      </div>
    </div>
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
    xs={1}
  >
    <div
      className="align_fg6t5ae"
    >
      <IconButtonMenu
        icon={<WithStyles(MoreVertIcon) />}
        menuItems={[Function]}
      />
    </div>
  </WithStyles(ForwardRef(Grid))>
</WithStyles(ForwardRef(Grid))>
`;

exports[`JobListItem Renders for failed schedule 1`] = `
<WithStyles(ForwardRef(Grid))
  className="job_f1y41u1"
  container={true}
  spacing={1}
>
  <WithStyles(ForwardRef(Grid))
    item={true}
    xs={1}
  >
    <div
      className="topAlign_fhdg7rv"
    >
      <WithStyles(CheckCircleIcon) />
    </div>
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
    xs={10}
  >
    <div>
      <span
        className="jobName_f1cjtqm0"
      >
        <a
          href="https://console.cloud.google.com/ai-platform/notebooks/schedule-details/notebook_abcd_abcxyz?project=test-project"
          target="_blank"
        >
          notebook abcd
           
          <WithStyles(LaunchIcon) />
        </a>
      </span>
    </div>
    <div>
      <div
        className="jobCaption_f1nmk5cv"
      >
        <span>
          Frequency: 
          Every 2 days at 9:30 AM UTC
        </span>
      </div>
      <div
        className="jobCaption_f1nmk5cv"
      >
        <span>
          Latest execution:
           
          May 1, 2020, 7:09 PM
        </span>
      </div>
      <div
        className="bold_f1wf24vo spacing_f1w4o4fu"
      >
        <LearnMoreLink
          disabled={false}
          href="https://notebooks.cloud.google.com/view/test-project/notebook_abcd/abcd.ipynb"
          noUnderline={true}
          text="VIEW LATEST EXECUTION RESULT"
        />
      </div>
    </div>
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
    xs={1}
  >
    <div
      className="align_fg6t5ae"
    >
      <IconButtonMenu
        icon={<WithStyles(MoreVertIcon) />}
        menuItems={[Function]}
      />
    </div>
  </WithStyles(ForwardRef(Grid))>
</WithStyles(ForwardRef(Grid))>
`;

exports[`JobListItem Renders for running execution 1`] = `
<WithStyles(ForwardRef(Grid))
  className="job_f1y41u1"
  container={true}
  spacing={1}
>
  <WithStyles(ForwardRef(Grid))
    item={true}
    xs={1}
  >
    <div
      className="topAlign_fhdg7rv"
    >
      <WithStyles(CheckCircleIcon) />
    </div>
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
    xs={10}
  >
    <div>
      <span
        className="jobName_f1cjtqm0"
      >
        <a
          href="https://console.cloud.google.com/ai-platform/jobs/notebook_abcd_abcxyz?project=test-project"
          target="_blank"
        >
          notebook abcd
           
          <WithStyles(LaunchIcon) />
        </a>
      </span>
    </div>
    <div>
      <div
        className="jobCaption_f1nmk5cv"
      >
        <span>
          May 1, 2020, 7:09 PM
        </span>
      </div>
      <div
        className="bold_f1wf24vo spacing_f1w4o4fu"
      >
        <LearnMoreLink
          disabled={false}
          href="https://notebooks.cloud.google.com/view/test-project/notebook_abcd/abcd.ipynb"
          noUnderline={true}
          text="VIEW RESULT"
        />
      </div>
    </div>
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
    xs={1}
  >
    <div
      className="align_fg6t5ae"
    >
      <IconButtonMenu
        icon={<WithStyles(MoreVertIcon) />}
        menuItems={[Function]}
      />
    </div>
  </WithStyles(ForwardRef(Grid))>
</WithStyles(ForwardRef(Grid))>
`;

exports[`JobListItem Renders for running schedule 1`] = `
<WithStyles(ForwardRef(Grid))
  className="job_f1y41u1"
  container={true}
  spacing={1}
>
  <WithStyles(ForwardRef(Grid))
    item={true}
    xs={1}
  >
    <div
      className="topAlign_fhdg7rv"
    >
      <WithStyles(CheckCircleIcon) />
    </div>
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
    xs={10}
  >
    <div>
      <span
        className="jobName_f1cjtqm0"
      >
        <a
          href="https://console.cloud.google.com/ai-platform/notebooks/schedule-details/notebook_abcd_abcxyz?project=test-project"
          target="_blank"
        >
          notebook abcd
           
          <WithStyles(LaunchIcon) />
        </a>
      </span>
    </div>
    <div>
      <div
        className="jobCaption_f1nmk5cv"
      >
        <span>
          Frequency: 
          Every 2 days at 9:30 AM UTC
        </span>
      </div>
      <div
        className="jobCaption_f1nmk5cv"
      >
        <span>
          Latest execution:
           
          May 1, 2020, 7:09 PM
        </span>
      </div>
      <div
        className="bold_f1wf24vo spacing_f1w4o4fu"
      >
        <LearnMoreLink
          disabled={false}
          href="https://notebooks.cloud.google.com/view/test-project/notebook_abcd/abcd.ipynb"
          noUnderline={true}
          text="VIEW LATEST EXECUTION RESULT"
        />
      </div>
    </div>
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
    xs={1}
  >
    <div
      className="align_fg6t5ae"
    >
      <IconButtonMenu
        icon={<WithStyles(MoreVertIcon) />}
        menuItems={[Function]}
      />
    </div>
  </WithStyles(ForwardRef(Grid))>
</WithStyles(ForwardRef(Grid))>
`;

exports[`JobListItem Renders for successful execution 1`] = `
<WithStyles(ForwardRef(Grid))
  className="job_f1y41u1"
  container={true}
  spacing={1}
>
  <WithStyles(ForwardRef(Grid))
    item={true}
    xs={1}
  >
    <div
      className="topAlign_fhdg7rv"
    >
      <WithStyles(CheckCircleIcon) />
    </div>
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
    xs={10}
  >
    <div>
      <span
        className="jobName_f1cjtqm0"
      >
        <a
          href="https://console.cloud.google.com/ai-platform/jobs/notebook_abcd_abcxyz?project=test-project"
          target="_blank"
        >
          notebook abcd
           
          <WithStyles(LaunchIcon) />
        </a>
      </span>
    </div>
    <div>
      <div
        className="jobCaption_f1nmk5cv"
      >
        <span>
          May 1, 2020, 7:09 PM
        </span>
      </div>
      <div
        className="bold_f1wf24vo spacing_f1w4o4fu"
      >
        <LearnMoreLink
          disabled={false}
          href="https://notebooks.cloud.google.com/view/test-project/notebook_abcd/abcd.ipynb"
          noUnderline={true}
          text="VIEW RESULT"
        />
      </div>
    </div>
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
    xs={1}
  >
    <div
      className="align_fg6t5ae"
    >
      <IconButtonMenu
        icon={<WithStyles(MoreVertIcon) />}
        menuItems={[Function]}
      />
    </div>
  </WithStyles(ForwardRef(Grid))>
</WithStyles(ForwardRef(Grid))>
`;

exports[`JobListItem Renders for successful schedule 1`] = `
<WithStyles(ForwardRef(Grid))
  className="job_f1y41u1"
  container={true}
  spacing={1}
>
  <WithStyles(ForwardRef(Grid))
    item={true}
    xs={1}
  >
    <div
      className="topAlign_fhdg7rv"
    >
      <WithStyles(CheckCircleIcon) />
    </div>
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
    xs={10}
  >
    <div>
      <span
        className="jobName_f1cjtqm0"
      >
        <a
          href="https://console.cloud.google.com/ai-platform/notebooks/schedule-details/notebook_abcd_abcxyz?project=test-project"
          target="_blank"
        >
          notebook abcd
           
          <WithStyles(LaunchIcon) />
        </a>
      </span>
    </div>
    <div>
      <div
        className="jobCaption_f1nmk5cv"
      >
        <span>
          Frequency: 
          Every 2 days at 9:30 AM UTC
        </span>
      </div>
      <div
        className="jobCaption_f1nmk5cv"
      >
        <span>
          Latest execution:
           
          May 1, 2020, 7:09 PM
        </span>
      </div>
      <div
        className="bold_f1wf24vo spacing_f1w4o4fu"
      >
        <LearnMoreLink
          disabled={false}
          href="https://notebooks.cloud.google.com/view/test-project/notebook_abcd/abcd.ipynb"
          noUnderline={true}
          text="VIEW LATEST EXECUTION RESULT"
        />
      </div>
    </div>
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
    xs={1}
  >
    <div
      className="align_fg6t5ae"
    >
      <IconButtonMenu
        icon={<WithStyles(MoreVertIcon) />}
        menuItems={[Function]}
      />
    </div>
  </WithStyles(ForwardRef(Grid))>
</WithStyles(ForwardRef(Grid))>
`;
